--- a/Article.tex
+++ b/Article.tex
@@ -28,12 +28,12 @@
 \maketitle
 
 \begin{abstract}
-Dans cet article, nous nous intéressons au problème de la détermination du caractère co-référentiel du pronom personnel \og \textit{il} \fg{}, que nous traitons comme une tâche d'apprentissage automatique supervisé. Nous présentons deux expériences utilisant les algorithmes CRF de l'étiquetage de séquences, réalisées sur le corpus Tutin et al. (2005). La première utilise les traits classiques de la détection de segments pour le français. Pour la seconde, nous ajoutons des traits recensés dans la littérature ou observés sur le corpus de développement. Nous montrons que ....
+Dans cet article, nous nous intéressons au problème de la détermination du caractère co-référentiel du pronom personnel \og \textit{il} \fg{}, que nous traitons comme une tâche d'apprentissage automatique supervisé. Nous présentons deux expériences utilisant les algorithmes CRF de l'étiquetage de séquences, réalisées sur le corpus Tutin et al. (2005). La première utilise les traits classiques de la détection de segments pour le français. Pour la seconde, nous ajoutons des traits recensés dans la littérature ou observés sur le corpus de développement. Nous montrons que l'approche par apprentissage obtient des résultats encourageants.
 \end{abstract}
 
 \renewcommand\abstractname{Abstract}
 \begin{abstract}
-In this article, we deal with the problem of determining whether the french pronoun \og \textit{il} \fg{} is coreferential, using a supervised machine learning approach. We present two experiments with CRF algorithms for sequence labeling, done on the Tutin corpus. The first one uses classic features for french chunks detection. For the second one, we add features identified in the litterature and by observation. We show that.....
+In this article, we deal with the problem of determining whether the french pronoun \og \textit{il} \fg{} is coreferential, using a supervised machine learning approach. We present two experiments with CRF algorithms for sequence labeling, done on the Tutin corpus. The first one uses classic features for french chunks detection. For the second one, we add features identified in the litterature and by observation. We show that the learning approach gives encouraging results.
 \end{abstract}
 
 
@@ -46,7 +46,7 @@ Co-référence, Apprentissage automatique, Pronom anaphorique, Pronom impersonne
 
 \renewcommand\abstractname{Keywords}
 \begin{abstract}
-Co-reference, Machine Learning, Anaphoric pronoun, Expletive pronous, Anaphora resolution
+Co-reference, Machine Learning, Anaphoric pronoun, Expletive pronoun, Anaphora resolution
 \end{abstract}
 
 \section*{Introduction}
@@ -54,7 +54,7 @@ Co-reference, Machine Learning, Anaphoric pronoun, Expletive pronous, Anaphora r
 Les anaphores sont des expressions qui permettent de désigner des entités dans les textes (\og \textit{il} \fg{}, \og \textit{cette maison} \fg{}), et qui possèdent un ou plusieurs antécédent(s), autrement dit une autre expression désignant la même entité. La résolution  d'anaphores est une problématique fondamentale partagée par divers domaines du Traitement Automatique des Langues (TAL). Il s'agit de déterminer quel est l'antécédent (ou les antécédents) de l'expression anaphorique.
 
 \paragraph{}
-Dans ce contexte, nous avons travaillé sur un problème plus particulier : la détermination de l'aspect co-référentiel d'une expression.
+Dans ce contexte, nous travaillons sur un problème plus particulier : la détermination de l'aspect co-référentiel d'une expression.
 
 \paragraph{}
 Au sein de cette problématique, les pronoms sont beaucoup traités car ils ont pour avantage d'être fréquents et facilement identifiables (Danlos\cite{danlos:ilimp:taln2005}, 2005). 
@@ -74,9 +74,9 @@ Certaines sont à base de règles lexico-syntaxiques (Lappin et al.\cite{Lappin:
 Pour le français, il n'existe qu'un outil à base de règles (Danlos 2005). Celui-ci obtient de très bons résultats, mais les outils à base de règles manquent généralement de robustesse. Par ailleurs, il est dépendant d'un outil tiers (UNITEX\footnote{http://www-igm.univ-mlv.fr/~unitex/\#}), rendant plus difficile une désolidarisation du prétraitement. 
 
 \paragraph{}
-L'objectif de notre travail est donc d'établir un système déterminant le caractère co-référentiel du \og{}\textit{il}\fg{} français. L'approche à base de règles est abandonnée au profit d'une approche à base d'apprentissage automatique supervisé, cette tâche pouvant être considérée comme une classification (prédiction d'étiquettes). Par ailleurs, on peut aussi chercher à définir la tâche comme un problème d'étiquetage de séquence (Sequence labeling), de par sa sensibilité au contexte local.
+L'objectif de notre travail est donc d'établir un système déterminant le caractère co-référentiel du \og{}\textit{il}\fg{} français. L'approche à base de règles est abandonnée au profit d'une approche à base d'apprentissage automatique supervisé, cette tâche pouvant être considérée comme une classification (prédiction d'étiquettes). Par ailleurs, on peut aussi chercher à définir la tâche comme un problème d'étiquetage de séquence (\emph{sequence labeling}), de par sa sensibilité au contexte local.
 
-Notre tâche pouvant être définie selon ces deux approches, il convient de les expérimenter toutes deux. Lors de la planification d'expériences, il s'est avéré plus simple de réaliser l'expérience avec le séquence labeler\footnote{L'expérience avec le sequence labeler consistait en une extension d'un TP réalisé sur la reconnaissance d'entités nommées}.
+Notre tâche pouvant être définie selon ces deux approches, il convient de les expérimenter toutes deux. Lors de la planification d'expériences, il s'est avéré plus simple de réaliser l'expérience avec le \emph{sequence labeler}\footnote{\samepage L'expérience avec le sequence labeler consistait en une extension d'un TP réalisé sur la reconnaissance d'entités nommées}.
 
 \paragraph{}
 En l'état de notre avancement, nous ne rapportons pour l'instant que les deux expériences à base de sequence labeling.
@@ -90,7 +90,7 @@ Cet article décrit dans un premier temps les travaux existants sur lesquels nou
 
 Dans un second temps, nous présentons le déroulement des expériences que nous avons réalisé sur ce corpus ainsi que leurs résultats.
 
-Nous terminons cet article par une discussion sur le travail effectué et sur ce qui pourrait être intéressant d'exploiter à l'avenir.
+Nous terminons cet article par une discussion sur le travail effectué et sur ce qu'il pourrait être intéressant d'exploiter à l'avenir.
 
 
 \section{État de l'art}
@@ -105,26 +105,26 @@ L'approche à base de règles développée pour le français est l'outil ILIMP, 
 La démarche est la suivante : dans un premier temps, on observe des constructions de phrases particulières qui permettent d'établir des patrons (en partant du principe que les entités lexicales employées avec le \og{}\textit{il}\fg{} sont déterminantes). Ces patrons sont écrits grâce à l'outil UNITEX (effectuant une tokénisation, un étiquetage morpho-syntaxique ainsi que des traits flexionnels).
 
 Les règles établies permettent de trouver toutes les occurrences de \og{}\textit{il}\fg{} impersonnelles, et vont les décorer de la balise [IMP] (la balise [ANA] étant définie par défaut).
-Il se trouve que pour chaque phrase, le contexte gauche, même s'il est complexe, est analysable sans trop de difficultés, c'est le contexte droit qui peut poser des ambiguïtés. Par exemple, deux constructions peuvent différer de façon très subtile : \og \textit{Il manque du poivre (dans cette maison)} \fg{}/\og \textit{Il manque de poivre, ce rôti} \fg{} (ici la première construction est impersonnelle et la seconde anaphorique alors qu'elles se distinguent seulement par \textit{du}/\textit{de}) ou encore des constructions comme \og \textit{Il est certain que Fred viendra} \fg{}  qui peuvent être à la fois impersonnelles et anaphoriques. 
-Pour les cas ambigus, il y a une balise [AMB], mais dans l'optique de l'utiliser le moins possible, l'outil va essayer de déterminer si le pronom est impersonnel à l'aide d'heuristiques basées sur les fréquences.
+Il se trouve que pour chaque phrase, le contexte gauche, même s'il est complexe, est analysable sans trop de difficultés ; c'est le contexte droit qui peut poser des ambiguïtés. Par exemple, deux constructions peuvent différer de façon très subtile : \og \textit{Il manque du poivre (dans cette maison)} \fg{}/\og \textit{Il manque de poivre, ce rôti} \fg{} (ici la première construction est impersonnelle et la seconde anaphorique alors qu'elles se distinguent seulement par \textit{du}/\textit{de}) ou encore des constructions comme \og \textit{Il est certain que Fred viendra} \fg{}  qui peuvent être à la fois impersonnelles et anaphoriques. 
+Pour les cas ambigus, on a recours à une balise [AMB], mais dans l'optique de l'utiliser le moins possible, l'outil va tenter de déterminer si le pronom est impersonnel à l'aide d'heuristiques basées sur les fréquences.
 
-Pour évaluer ILIMP, le corpus utilisé est Le Monde, comportant 3.782.613 tokens, dont 13.611 occurrences de \og{}\textit{il}\fg{}, celles-ci ayant été annotées à la main. Il ressort de cette évaluation un taux de précision de 97.5\%. La plupart des erreurs obtenues sont des balises [ANA] à la place de [IMP] car [ANA] est la balise par défaut, et les règles utilisées n'ont pas couvert tous les cas. Il y a peu d'erreurs [IMP] à la place de [ANA] malgré les heuristiques brutales.
+Pour évaluer ILIMP, le corpus utilisé est \emph{Le Monde}, comportant 3.782.613 tokens, dont 13.611 occurrences de \og{}\textit{il}\fg{}, celles-ci ayant été annotées à la main. Il ressort de cette évaluation un taux de précision de 97.5\%. La plupart des erreurs obtenues sont des balises [ANA] à la place de [IMP] car [ANA] est la balise par défaut, et les règles utilisées n'ont pas couvert tous les cas. Il y a peu d'erreurs [IMP] à la place de [ANA] malgré les heuristiques brutales.
 Par ailleurs, les résultats sont meilleurs sur un corpus journalistique que littéraire.
 
 
 \paragraph{}
 L'approche pour l'anglais proposée par S. Bergsma et D. Yarowski (2011), va allier l'apprentissage automatique supervisé et des observations statistiques.
-Ce système (NADA : Non-Anaphoric Detection Algorithm) prend en entrée des données tokénisées et détecte les occurences de \og{}\textit{it}\fg{} non-référentielles. Les données en question n'ont pas été analysées morpho-syntaxiquement, car ils font le postulat que l'ambiguïté repose sur la présence d'entités lexicales spécifiques, et non sur les informations morpho-syntaxiques.
+Ce système (NADA : Non-Anaphoric Detection Algorithm) prend en entrée des données tokénisées et détecte les occurences de \og{}\textit{it}\fg{} non-référentielles. Les données en question n'ont pas été analysées morpho-syntaxiquement, car le postulat est fait que l'ambiguïté repose sur la présence d'entités lexicales spécifiques, et non sur les informations morpho-syntaxiques.
 
-Deux types de traits sont alors apportés au classifieur : des traits lexicaux-syntaxiques mais aussi des statistiques tirées du corpus n-gram de Google\cite{google-ngram}, le classifieur en question est fondé sur un modèle de régression.
+Deux types de traits sont alors apportés au classifieur : des traits lexicaux-syntaxiques, mais aussi des statistiques tirées du corpus n-gram de Google\cite{google-ngram}, le classifieur en question est fondé sur un modèle de régression.
 
-Les traits lexicaux sont extraits sur la phrase entière. Il y a par exemple la présence ou non d'autres formes du pronom personnel (\textit{its}/\textit{itself}, la présence d'acronymes, de prépositions juste avant le nom, de \og{}\textit{that}\fg{} ou \og{}\textit{to}\fg{} après le pronom, etc.
+Les traits lexicaux sont extraits sur la phrase entière. Il y a par exemple la présence ou non d'autres formes du pronom personnel (\textit{its}/\textit{itself}), la présence d'acronymes, de prépositions juste avant le nom, de \og{}\textit{that}\fg{} ou \og{}\textit{to}\fg{} après le pronom, etc.
 
-Les traits statistiques sont établis grâce à l'énorme banque de données fournie par Google. En effet, pour chaque 4-gramme contenant le pronom \og{}\textit{it}\fg{}, on va établir un patron (le \og{}\textit{it}\fg{} est remplacé par un \og{}\textit{\_}\fg{}) et regarder dans les données si d'autres mots remplissent ce patron, ou si seulement le cas de figure avec \og{}\textit{it}\fg{} a été rencontré. Par exemple, si on extrait \og{}\textit{it is able to}\fg{}, on va rechercher toutes les occurences de la forme \og{}\textit{\_ is able to}\fg{}.
+Les traits statistiques sont établis grâce à l'énorme banque de données fournie par Google. En effet, pour chaque 4-gramme contenant le pronom \og{}\textit{it}\fg{}, on va établir un patron (le \og{}\textit{it}\fg{} est remplacé par un \og{}\textit{\_}\fg{}) et observer dans les données si d'autres mots remplissent ce patron, ou si seulement le cas de figure avec \og{}\textit{it}\fg{} a été rencontré. Par exemple, si on extrait \og{}\textit{it is able to}\fg{}, on va rechercher toutes les occurences de la forme \og{}\textit{\_ is able to}\fg{}.
 Les résultats obtenus permettent d'ajouter un trait (un poids) dans le classifieur.
 Seulement, ce corpus étant gigantesque, il a fallu le compresser au maximum. Pour ce faire, diverses techniques ont été utilisées : ne récupérer que les 4-grammes, uniquement ceux contenant \og{}\textit{it}\fg{}, \og{}\textit{they}\fg{} ou \og{}\textit{them}\fg{}, tronquer les mots à 4 caractères, les encoder, ne retenir que les changements d'un 4-gramme à l'autre, etc.
 
-NADA a été évalué sur les corpus BBN, WSJ-2 et ItBank (refs). Les résultats sont similaires pour les 3 corpus (entre 85.1\% et 86.2\%). Par comparaison, l'évaluation a aussi été réalisée avec seulement les traits lexicaux et seulement les traits statistiques, obtenant de moins bons résultats indépendamment (en moyenne 80\% pour les traits lexicaux et 83.5\% pour les traits statistiques).
+NADA a été évalué sur les corpus BBN\cite{BBN}, WSJ-2 (tiré du Penn Treebank\cite{Marcus:1993:BLA:972470.972475}) et ItBank\cite{Bergsma08distributionalidentification}. Les résultats sont similaires pour les 3 corpus (entre 85,1\% et 86,2\%). Par comparaison, l'évaluation a aussi été réalisée avec seulement les traits lexicaux et seulement les traits statistiques, obtenant de moins bons résultats indépendamment (en moyenne 80\% pour les traits lexicaux et 83,5\% pour les traits statistiques).
 
 \section{Corpus de travail}
 
@@ -139,10 +139,10 @@ L'annotation a été faite à la main par deux linguistes (le processus n'est pa
 
 L'annotation est effectuée en XML. Des balises permettent de distinguer les sections, les paragraphes (<p>), les phrases (<s>) ainsi que les expressions (<exp>). Chaque expression a un ID, et une balise <ptr> permet de lier une expression anaphorique a son(ses) antécédent(s), et renseigner le type de liaison. Quelques autres balises ou attributs permettent de distinguer les cas spéciaux, comme la balise <seg> pour délimiter un segment d'un antécédent spécifique à celui-ci.
 
-Contrairement à d'autres schémas d'annotation (MUC et MATE de base (ref)), ce schéma ne se restreint pas aux coréférences. Il traite d'un ensemble fini de relations, similaire au schéma UCREL (ref).
+Contrairement à d'autres schémas d'annotation (MUC\cite{hirschman-97} et MATE\cite{mate} de base), ce schéma ne se restreint pas aux coréférences. Il traite d'un ensemble fini de relations, similaire au schéma UCREL\cite{Rayson2004}.
 
 \paragraph{}
-Afin de mettre en place une chaîne de traitement, nous travaillons sur la portion du corpus contenant les articles du journal \emph{Le Monde} (rubrique économie). Cette portion contient N mots. Ceci nous permet d'établir rapidement notre processus d'extraction de traits, même si dans l'idéal, il aurait été préférable de travailler sur une plus grande portion du corpus.
+Afin de mettre en place une chaîne de traitement, nous travaillons sur la portion du corpus contenant les articles du journal \emph{Le Monde} (rubrique économie). Cette portion contient 202.091 mots. Ceci nous permet d'établir rapidement notre processus d'extraction de traits, même si dans l'idéal, il aurait été préférable de travailler sur une plus grande portion du corpus.
 
 \paragraph{}
 Nous transformons cette portion en un corpus au format BIO\footnote{Le format BIO permet d'étiqueter les tokens selon qu'ils débutent (Beginning of -- B), sont à l'intérieur (Inside of -- I), ou sont hors (Outside -- O) de la zone d'intérêt.}. Pour cela, on ne garde que les balises associées aux pronoms \og \textit{il} \fg{}, et on les convertit en étiquettes \verb!B-coref! (début d'une entité de \og \textit{il} \fg{} coréférentielle). On considère ensuite tous les \og \textit{il} \fg{} non annotés comme impersonnels, et on les décore de l'étiquette \verb!B-non-coref!.
@@ -150,7 +150,11 @@ Nous transformons cette portion en un corpus au format BIO\footnote{Le format BI
 Nous disposons à ce stade d'un corpus contenant 1176 occurrences du pronom \og \textit{il} \fg{}, dont 537 sont coréférentielles, et 631 impersonnelles.
 
 \paragraph{}
-Nous divisons ensuite ce corpus en 3 parties. Un dixième est consacré au développement, un autre dixième au test, et tout le reste à l'entraînement du sequence labeler. C'est sur cette dernière partie que nous travaillons ensuite. Pour l'évaluation par validation croisée (voir ci-dessous), nous partitionnons le corpus d'entraînement en 10.
+Nous divisons ensuite ce corpus en 3 parties. Un dixième constitue le corpus de développement, un autre dixième celui de test, et tout le reste est consacré à l'entraînement du sequence labeler.
+
+
+C'est sur cette dernière partie que nous travaillons ensuite.
+Le corpus de test demeure quant-à lui inchangé et non consulté durant toute cette phase de tests, puisque nous réservons son usage à de futurs travaux.
 
 \section{Compilation des traits recensés dans la littérature et enrichis par l'observation}
 
@@ -162,45 +166,52 @@ Notre première expérience consiste à tester les traits classiques utilisés p
 \paragraph{}
 Pour notre seconde expérience, nous apportons nos propres traits au sequence labeler. Ceux-ci proviennent de la littérature ainsi que de l'observation des données.
 
-Nous avons choisi d'extraire les traits additionnels au sein de la phrase, à l'instar des travaux de S. Bergsma et D. Yarowski. En effet, ceux-ci se sont basés sur les procédés humains : ils ont fait l'expérience en demandant à un sujet d'annoter 200 occurrences du \og{}it\fg{} anglais. Celui-ci obtient un taux d'exactitude de 85\% s'il dispose des 4 tokens de chaque côté de l'occurrence, contre 95\% s'il dispose de la phrase entière. Nous faisons l'hypothèse que cette fenêtre est aussi plus judicieuse pour le texte français.
+Nous avons choisi d'extraire certains traits additionnels au sein de la phrase, à l'instar des travaux de S. Bergsma et D. Yarowski. En effet, ceux-ci se sont basés sur les procédés humains : l'expérience consistait à demander à un sujet d'annoter 200 occurrences du \og{}it\fg{} anglais. Celui-ci obtient un taux d'exactitude de 85\% s'il dispose des 4 tokens de chaque côté de l'occurrence, contre 95\% s'il dispose de la phrase entière. Nous faisons l'hypothèse que cette fenêtre est aussi plus judicieuse pour le texte français.
 
+\paragraph{}
 Voici les traits retenus :
 
 \paragraph{}
-\begin{itemize}
- \item[\textbullet] L'observation des formes de surface autour de l’occurrence :
+\textbullet{} L'observation des formes de surface autour de l'occurrence :
  \begin{itemize}
-  \item Premier adjectif/verbe/adverbe/préposition après
-  \item Première combinaison telle verbe+préposition après
-  \item Première conjonction avant (puisqu', quand,...)
+  \item Premier verbe/préposition/adverbe/adjectif/clitique suivant l'occurrence
+  \item Premier verbe/préposition/adverbe/adjectif/conjonction précédent l'occurrence
+  \item Première combinaison du type verbe+préposition suivant l'occurrence
   \item Signes de ponctuation
  \end{itemize}
- \item[\textbullet] La présence ou non de certains tokens (booléens) :
+ 
+\paragraph{}
+\textbullet{} La présence ou non de certains tokens (booléens) :
  \begin{itemize}
-  \item Présence de déterminant possessif 3e personne (ses, son, sa...)
+  \item Présence de déterminant possessif à la 3ème personne du singulier (ses, son, sa, ...)
   \item Présence d'un acronyme
-  \item Présence du pronom 'lui'
-  \item Présence d'une autre occurrence de 'il'
-  \item Présence d'une date/time ?
+  \item Présence du pronom \og{}lui\fg{}
+  \item Présence d'une autre occurrence de \og{}il\fg{}
  \end{itemize}
- \item[\textbullet] Les statistiques sur la phrase (entiers) :
+ 
+\paragraph{}
+\textbullet{} Les statistiques sur la phrase (entiers) :
  \begin{itemize}
   \item Taille de la phrase
   \item Nombre de \og{}il\fg{} dans la phrase
  \end{itemize}
- \item[\textbullet] Certains patrons fréquents (booléens) :
+
+\paragraph{}
+\textbullet{} Certains patrons fréquents (booléens) :
  \begin{itemize}
   \item verbes météorologiques (brouillasser, bruiner, brumasser, brumer, crachiner, gouttiner, grêler, neigeoter, neiger, pleuvasser, pleuviner, pleuvioter, pleuvoir, pleuvoter,  pluviner, reneiger, repleuvoir, surventer, tonner, venter, verglacer)
-  \item autres verbes impersonnels (advenir, s'agir, s'ensuivre, incomber, résulter?, falloir, apparoir, barder, bichoter, dracher, s'en falloir, se pouvoir, y avoir)
+  \item autres verbes impersonnels (advenir, s'agir, s'ensuivre, incomber, résulter, falloir, apparoir, barder, bichoter, dracher, s'en falloir, se pouvoir, y avoir) \\
   \item structures impersonnelles de temps (il est temps de/que, il est l'heure de/que)
   \item patrons fréquents (Il arrive que, il paraît que, il semble que, il se peut que, il me semble que, il vaut mieux que (ou il vaut mieux + infinitif), il suffit que (ou il suffit que + infinitif), etc.)
-  \item expressions avec il impersonnel (il était une fois, il y a, quoi qu'il en soit,...)
+  \item expressions typiquement impersonnelles (il était une fois, il y a, quoi qu'il en soit,...)
   \item verbes déclaratifs (dire, affirmer, annoncer, croire, prétendre,...) sauf forme passive
   \item verbes de sentiment (admirer, craindre, s'étonner,...)
   \item verbes de volonté (vouloir, exiger, désirer, souhaiter, supplier, prier,...) sauf forme passive
   \item verbes d'opinion (croire, douter, imaginer, penser, estimer, juger,...)
  \end{itemize}
-\end{itemize}
+
+\paragraph{}
+De plus, pour observer le contexte local, les traits classiques pour la reconnaissance de chunks utilisent une fenêtre de 5 tokens (2 avant et 2 après). Nous avons donc envisagé d'élargir celle-ci à 5 tokens avant et après, et de prendre en compte les trigrammes au sein de cette nouvelle fenêtre.
 
 % \paragraph{}
 % Ces traits permettent de décrire chaque occurence de \og{}\textit{il}\fg{} au sein du corpus. Nous y ajoutons un dernier type de trait, provenant de l'observation de données extérieures, en l'occurence du corpus Ngram Google :
@@ -223,17 +234,17 @@ Le principe du modèle CRF appliqué à l'étiquetage de séquences est le suiva
 
 \subsection{Mise en place d'une chaîne de traitement}
 
-Wapiti prend en entier des fichiers tabulés décrivant chaque token : une ligne correspond à un token, et chaque colonne contient une information telle que forme de surface, étiquetage morpho-syntaxique, flexions, \ldots. La dernière colonne contient la classe que l'on recherche, ici l'annotation au format BIO .
+Wapiti prend en entier des fichiers tabulés décrivant chaque token : une ligne correspond à un token, et chaque colonne contient une information telle que la forme de surface, l'étiquetage morpho-syntaxique, les flexions, \ldots La dernière colonne contient la classe que l'on recherche, ici l'annotation au format BIO .
 
 \paragraph{}
-Nous avons préalablement prétraité les données avec les analyseurs Apache OpenNLP\footnote{https://opennlp.apache.org/}\cite{boudin:detection:taln12}. 
+Nous prétraitons en premier lieu les données avec les analyseurs Apache OpenNLP\footnote{https://opennlp.apache.org/}\cite{boudin:detection:taln12}. 
 Ce prétraitement nous permet d'obtenir les étiquettes morpho-syntaxiques ainsi que les traits flexionnels.
 Puis, à l'aide de scripts Bash, nous mettons en place nos fichiers tabulés contenant les informations nécessaires à notre deuxième série d'expériences, à savoir la taille de la phrase, le nombre d'occurrences de \og il \fg{} dans celle-ci, etc.
 
-Au final, notre fichier tabulé contient les colonnes suivantes :
-\begin{itemize}
+Au final, notre fichier tabulé contient les colonnes suivantes : \\
+\begin{itemize} 
 \item forme de surface du token
-\item étiquette morpho-syntacique
+\item étiquette morpho-syntaxique
 \item traits flexionnels
 \item taille de la phrase
 \item nombre d'occurrences de \og il \fg{} dans la phrase
@@ -249,7 +260,7 @@ Au final, notre fichier tabulé contient les colonnes suivantes :
 \item adverbe suivant
 \item adjectif suivant
 \item clitique suivant
-\item étiquette BIO représentant la classe (\verb!B-coref! ou \verb!B-non-coref!)
+\item étiquette BIO représentant la classe (\verb!O!, \verb!B-coref! ou \verb!B-non-coref!)
 \end{itemize} 
 
 \paragraph{}
@@ -262,7 +273,7 @@ A partir de ces traits, nous pouvons dorénavant entraîner notre modèle.
 \subsection{Baseline}
 
 Nous considérons que la Baseline correspond à un étiquetage systématique en \verb!B-non-coref!, celle-ci étant la classe majoritaire.
-Le taux d'occurrences correctement classées est donc de 53.66\%.
+Le taux d'occurrences correctement classées est donc de 53,66\%.
 
 \subsection{Evaluation}
 
@@ -276,30 +287,49 @@ Par exemple, pour la classe \verb!B-coref!, les mesures sont données par les fo
 
 \[ F\-mesure = \frac{2 * (Precision * Rappel)}{(Precision + Rappel)} \]
 
-Wapiti étant assez long à calculer le modèle, nous évaluons dans un premier temps uniquement sur la première partition.
 
-\subsubsection{Expérience avec les traits classiques de reconnaissance des chunks}
+\section{Résultats et discussion}
 
-\begin{tabular}[H]{l|lll|lll}
-& \multicolumn{3}{c|}{B-coref} & \multicolumn{3}{c}{B-non-coref}\\
-Exactitude & Précision & Rappel & F-mesure & Précision & Rappel & F-mesure\\
-\hline
-\end{tabular}
-
-\subsubsection{Série d'expériences avec incorporation de nouveaux traits}
-
-\begin{tabular}[H]{l|lll|lll}
-& \multicolumn{3}{c|}{B-coref} & \multicolumn{3}{c}{B-non-coref}\\
-Exactitude & Précision & Rappel & F-mesure & Précision & Rappel & F-mesure\\
-\hline
-\end{tabular}
-
-\section{Discussion}
-
-Phrase d'entrée.
+Nous détaillons à présent les résultats obtenus lors de nos expérimentations.
 
 \paragraph{}
-Premièrement, la totalité du corpus n'a pas été exploitée. En effet, nous n'avons travaillé que sur les articles du Monde, ce qui représente un cinquième du corpus Tutin et al. Ensuite, nous n'avons évalué le sequence labeler que sur la première partition, ce qui ne reflète pas forcément correctement les résultats réels.
+\textbf{Expérience avec les traits classiques de reconnaissance des chunks :}
+
+\begin{tabular}[H]{l|lll|lll}
+& \multicolumn{3}{c|}{B-coref} & \multicolumn{3}{c}{B-non-coref}\\
+Exactitude & Précision & Rappel & F-mesure & Précision & Rappel & F-mesure\\
+\hline
+0,8 & 0,79 & 0,77 & 0,78 & 0,8 & 0,84 & 0,82\\
+\hline
+\end{tabular}
+
+\paragraph{}
+On constate que l'observation du contexte proche suffit à obtenir des résultats satisfaisants, avec 82\% d'occurrences correctement classées.
+
+\paragraph{}
+\textbf{Série d'expériences avec incorporation de nouveaux traits :}
+
+\begin{tabular}[H]{l|lll|lll}
+& \multicolumn{3}{c|}{B-coref} & \multicolumn{3}{c}{B-non-coref}\\
+Exactitude & Précision & Rappel & F-mesure & Précision & Rappel & F-mesure\\
+\hline
+
+\hline
+\end{tabular}
+
+\paragraph{}
+La plupart des traits ajoutés n'ont pas été concluents : seuls le nombre de pronoms \og il \fg{} dans la phrase, le verbe suivant le token ainsi que la préposition suivante ont amélioré les scores. Nous arrivons au final à un taux de prédictions correctes de N.
+
+\paragraph{}
+Nous n'avons pour l'instant pas implémenté les traits relatifs au lexique, mais c'est une piste à envisager pour des travaux futurs.
+
+\paragraph{}
+De plus, seule l'approche par étiquetage de séquence à été abordée à travers nos expériences. Il serait judicieux de tester avant tout la résolution de ce problème en tant que tâche de classification. Comme expliqué dans l'introduction, nous avons opté pour le sequence labeling car ces expériences faisaient écho à d'autres travaux, mais ce n'est pas pour autant qu'il faille rejeter l'approche par classification.
+
+\paragraph{}
+On peut aussi noter que la totalité du corpus n'a pas été exploitée. En effet, nous n'avons travaillé que sur les articles du Monde, ce qui représente un cinquième du corpus Tutin et al.
+
+Par ailleurs, nous n'avons entraîné le sequence labeler que sur la première partition lors des étapes intermédiaires de nos expériences, ce qui ne reflète pas forcément les résultats réels.
 
 \paragraph{}
 Il aurait aussi pu être intéressant de se servir de statistiques extrinsèques au corpus, au même titre que les travaux de S. Bergsma et D. Yarowski sur la langue anglaise. Effectivement, il existe un corpus Ngram fourni par Google, en français.
@@ -307,16 +337,18 @@ Il aurait aussi pu être intéressant de se servir de statistiques extrinsèques
 \paragraph{}
 Par ailleurs, il pourrait être judicieux de nettoyer les données avant de les fournir à la chaîne de traitement, ou du moins normaliser certains éléments.
 
-% TODO : traits non implémentés
-
 
 \section*{Conclusion}
 
+Cette étude s'est focalisée sur la détermination du caractère co-référentiel des occurrences du pronom \og il \fg{}. Les seuls travaux à notre connaissance existants pour le français utilisant un système à base de règles, nous avons ici opté pour un système d'apprentissage automatique supervisé.
 
+A travers cet article, nous avons décrit les expériences réalisées avec un sequence labeler. Dans un premier temps, nous avons utilisé les traits classiques employés pour de la recherche d'entités lexicales. Ces traits observent le contexte local, et donnent des résultats plutôt satisfaisants.
 
-\section*{Remerciements}
+Nous avons ensuite apporté nos propres traits, tirés de la littérature ainsi que de l'observation de notre corpus de développement. Certains d'entre eux ont amélioré les résultats, même si tous n'ont pas été implémentés à l'heure actuelle.
 
-Nicolas Hernandez
+Il sera donc intéressant pour la suite de tester les autres traits envisagés, ainsi que d'aborder cette tâche comme une tâche de classification.
+
+En définitive, les pistes que nous avons exploré nous donnent des résultats relativement encourageants vis-à-vis de l'apprentissage automatique. Certaines pistes restent cependant à approfondir, afin d'obtenir un outil suffisamment performant pour être incorporé dans un système plus vaste de résolution d'anaphores.
 
 \bibliographystyle{plain}
 \bibliography{biblio}
