--- a/biblio.bib
+++ b/biblio.bib
@@ -89,3 +89,74 @@
  title = {The Google Web 1T 5-gram Corpus Version 1.1. LDC2006T13},
  year = {2006}
 }
+
+@techreport{BBN,
+    author = {Weischedel, Ralph and Brunstein, Ada},
+    citeulike-article-id = {10475986},
+    institution = {Linguistic Data Consortium, Philadelphia},
+    posted-at = {2012-03-19 10:17:00},
+    priority = {2},
+    title = {{BBN Pronoun Coreference and Entity Type Corpus}},
+    year = {2005}
+}
+
+@article{Marcus:1993:BLA:972470.972475,
+ author = {Marcus, Mitchell P. and Marcinkiewicz, Mary Ann and Santorini, Beatrice},
+ title = {Building a large annotated corpus of English: the penn treebank},
+ journal = {Comput. Linguist.},
+ issue_date = {June 1993},
+ volume = {19},
+ number = {2},
+ month = jun,
+ year = {1993},
+ issn = {0891-2017},
+ pages = {313--330},
+ numpages = {18},
+ url = {http://dl.acm.org/citation.cfm?id=972470.972475},
+ acmid = {972475},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA}
+} 
+
+@INPROCEEDINGS{Bergsma08distributionalidentification,
+    author = {Shane Bergsma and Dekang Lin and Google Inc and Randy Goebel},
+    title = {Distributional identification of nonreferential pronouns},
+    booktitle = {In ACL},
+    year = {2008},
+    pages = {10--18}
+}
+
+@misc{hirschman-97,
+    author = {Hirschman, L.},
+    citeulike-article-id = {973329},
+    howpublished = {http://www.muc.saic.com/proceedings/co\_ task.pdf},
+    keywords = {bibtex-import},
+    posted-at = {2006-12-04 15:07:47},
+    priority = {2},
+    title = {{MUC-7 Coreference Task Definition}},
+    year = {1997}
+}
+
+@misc{mate,
+ author = {Davies, Sarah, Massimo Poesio, Florence Bruneseaux, and Laurent Romary},
+ title = {Annotating coreference in dialogues: Proposal for a scheme for MATE},
+ year = {1998}
+}
+
+@inproceedings{Rayson2004,
+    abstract = {{The UCREL semantic analysis system (USAS) is a software tool for undertaking the automatic semantic analysis of English spoken and written data. This paper describes the software system, and the hierarchical semantic tag set containing 21 major discourse fields and 232 fine-grained semantic field tags. We discuss the manually constructed lexical resources on which the system relies, and the seven disambiguation methods including part-of-speech tagging, general likelihood ranking, multi-word-expression extraction, domain of discourse identification, and contextual rules. We report an evaluation of the accuracy of the system compared to a manually tagged test corpus on which the USAS software obtained a precision value of 91\%. Finally, we make reference to the applications of the system in corpus linguistics, content analysis, software engineering, and electronic dictionaries.}},
+    address = {Paris},
+    author = {Rayson, Paul and Archer, Dawn and Piao, Scott and McEnery, Tony},
+    booktitle = {Proceedings of the LREC 2004 Workshop on Beyond Named Entity Recognition Semantic Labelling for NLP Tasks},
+    citeulike-article-id = {10425873},
+    citeulike-linkout-0 = {http://comp.eprints.lancs.ac.uk/922/},
+    keywords = {nlp, semantics},
+    location = {Lisbon, Portugal},
+    organization = {European Language Resources Association (ELRA)},
+    pages = {7--12},
+    posted-at = {2012-03-07 22:37:30},
+    priority = {2},
+    title = {The {UCREL} semantic analysis system},
+    url = {http://comp.eprints.lancs.ac.uk/922/},
+    year = {2004}
+}
